# C-learning

./: CMakeLists.txt  redirectIO.bat
src/io/: console.c  redirectIO.c
src/syntax/: comment.c  control.c  data_type.c  function.c  operation.c
src/syntax/data/: array.c  pointer.c  primitive.c
